Adding line chart and fixed dark theme for guest pages

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "vue-lend-borrow",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/js": "^6.4.95",
+    "chart.js": "^3.6.0",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.6.1",
     "vue": "^3.2.36",
